--- a/blue.html
+++ b/blue.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
 
-    <link href="blue.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/blue.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <a href="red.html">Switch to Red</a>
