--- a/red.html
+++ b/red.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
 
-    <link href="red.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/red.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
     <a href="blue.html">Switch to Blue</a>
